# stacs

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS
.github/workflows/: check.yml  publish.yml  publish_to_testing.yml  update.yml
stacs/: __about__.py  __init__.py  constants.py  exceptions.py
stacs/entrypoint/: __init__.py  cli.py
stacs/filter/: __init__.py  ignore_list.py
stacs/loader/: __init__.py  archive.py  filepath.py  manifest.py
stacs/model/: __init__.py  finding.py  ignore_list.py  manifest.py  pack.py
stacs/native/archive/src/: archive.cpp  archiveentry.cpp  archiveentry.hpp  archivereader.cpp  archivereader.hpp
stacs/output/: __init__.py  markdown.py  sarif.py
stacs/scan/: __about__.py  __init__.py  constants.py  exceptions.py  helper.py
stacs/scan/entrypoint/: __init__.py  cli.py
stacs/scan/filter/: __init__.py  ignore_list.py
stacs/scan/loader/: __init__.py  archive.py  filepath.py  manifest.py
stacs/scan/loader/format/: __init__.py  dmg.py  xar.py
stacs/scan/model/: __init__.py  finding.py  ignore_list.py  manifest.py  pack.py
stacs/scan/output/: __init__.py  markdown.py  pretty.py  sarif.py
stacs/scan/scanner/: __init__.py  rules.py
stacs/scanner/: __init__.py  rules.py
tests/: test_filter_ignore_list.py  test_loader_filepath.py  test_model_ignore_list.py  test_model_pack.py  test_output_sarif.py  test_scanner_rule.py
tests/fixtures/findings/: 001.txt  002.txt  003.txt  004.txt
tests/fixtures/ignore_list/: 001-simple.valid.json  002-framework.valid.json  002-project.valid.json  002-system.valid.json
tests/fixtures/pack/: 001-simple.valid.json  002-cloud.valid.json  002-parent.valid.json  002-pki-dsa.valid.json  002-pki-rsa.valid.json  002-pki.valid.json
wrapper/: stacs-scan
